[package]
name = "framehop-object"
version = "0.2.0"
edition = "2021"
authors = ["Alex Franchuk <alex.franchuk@gmail.com>"]
description = "A framehop::ModuleSectionInfo implementation for the object crate"
keywords = ["framehop", "object"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/framehop-object/"
repository = "https://github.com/afranchuk/framehop-object/"

[dependencies]
framehop = ">=0.9"
object = { version = ">=0.35", default-features = false, features = ["read_core"] }

[dev-dependencies]
object = "0.35"
